<resources>
    <string name="app_name">WhatsApp Fast Message</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="share">Share</string>
    <string name="no_selected_file">No selected file</string>
    <string name="pick_file">Pick File</string>
    <string name="change_file">Change File</string>
    <string name="telephone">Telephone</string>
    <string name="canceled">Canceled</string>
    <string name="error_file_read">File read failed!</string>
</resources>